[package]
authors = ["heiso <alexandre.moatty@gmail.com>"]
name = "macrolev_firmware"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
adafruit-kb2040 = "0.3.0"
usb-device = "0.2.9"
usbd-hid = "0.6.0"
nb = "1.0.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false